Style/color variation with config.css, proto 2nd style for Celesta

--- a/app/assets/stylesheets/mohican/config_c5a.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config_c5a.css.scss.erb
@@ -1,4 +1,4 @@
-$mn-colorscheme-0A: #63FF3F !default;
+$mn-colorscheme-0A: #FFBE19 !default;
 
 $mn-colorscheme-1P: #B4E6FF !default;
 $mn-colorscheme-1L: #85CEF2 !default;
@@ -7,17 +7,17 @@ $mn-colorscheme-1D: #039be5 !default;
 $mn-colorscheme-1V: #428bca !default;
 $mn-colorscheme-1A: #FF8616 !default;
 // color 1Pale, 1Light, 1Medium, 1Dark, 1Very dark, 1Accent(contrast color)
-$mn-colorscheme-2L: #AEF6BF !default;
-$mn-colorscheme-2M: #96D098 !default;
-$mn-colorscheme-2D: #86CA87 !default;
-$mn-colorscheme-2V: #00796B !default;
+$mn-colorscheme-2L: #EBF0FA !default;
+$mn-colorscheme-2M: #BEC8E1 !default;
+$mn-colorscheme-2D: #BEC8E1 !default;
+$mn-colorscheme-2V: #96AAC8 !default;
 
-$mn-colorscheme-3V: #333 !default;
-$mn-colorscheme-3D: #333 !default;
+$mn-colorscheme-3V: #19323C !default;
+$mn-colorscheme-3D: #23415A !default;
 
-$mn-brand-height: 42px !default;
-$mn-brand-width: 145px !default;
-$mn-brand-bg: url(<%= asset_path 'logo.png' %>) no-repeat center !default;
+$mn-brand-height: 50px !default;
+$mn-brand-width: 172px !default;
+$mn-brand-bg: url(<%= asset_path 'logo_celesta.png' %>) no-repeat center !default;
 $mn-navbar-inverse-bg: linear-gradient($mn-colorscheme-3V,$mn-colorscheme-3D) !default;
 
 $app-hide-title: 496px !default;
