--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -1,4 +1,5 @@
 @import "config";
+// @import "config_c5a";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
@@ -60,7 +61,8 @@ a.navbar-brand.active, a.navbar-brand:focus {
 }
 
 .navbar-inverse {
-  background-color:#0A1D42;
+  background:$mn-navbar-inverse-bg;
+  border:0 !important;
 }
 
 
@@ -127,7 +129,7 @@ a.navbar-brand.active, a.navbar-brand:focus {
 }
 
 .QfRow button {
-  background: #a5d6a7;
+  background: $mn-colorscheme-2L;
   padding: 3px 1px 2px 3px !important;
   height:auto !important;
 }
@@ -414,7 +416,7 @@ mn-item-reports > div {
   padding: 4px;
   border-bottom: 0 ;
   border-right: 0 ;
-  background: linear-gradient(#AEF6BF,#96D098);
+  background: $mn-grid-header-container-bg;
   vertical-align: middle !important;
 }
 
@@ -479,5 +481,5 @@ mn-item-reports > div {
 }
 
 .accent0 {
-  color:#63FF3F !important;
+  color:$mn-colorscheme-0A !important;
 }
