--- a/app/assets/stylesheets/mohican/includes/angular-multi-select.css
+++ b/app/assets/stylesheets/mohican/includes/angular-multi-select.css
@@ -64,7 +64,7 @@
 /* labels on the button */
 .multiSelect .buttonLabel {
     display: inline-block;
-    padding: 5px 0px 5px 0px; 
+    padding: 5px 0px 5px 0px;
 }
 
 /* downward pointing arrow */
@@ -204,7 +204,7 @@
 /* item labels focus on mouse hover */
 .multiSelect .multiSelectItem:hover,
 .multiSelect .multiSelectGroup:hover {
-    background-image: linear-gradient( #c1c1c1, #999 ) !important;
+    background-image: linear-gradient( #c1c1c1, #999 ) ;
     color: #fff !important;
     cursor: pointer;
     border: 1px solid #ccc !important;
