New look, body & navbar bkg, not complete yet

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -15,9 +15,11 @@ $mn-colorscheme-2V: #00796B !default;
 $mn-colorscheme-3V: #333 !default;
 $mn-colorscheme-3D: #333 !default;
 
-$mn-brand-height: 42px !default;
-$mn-brand-width: 145px !default;
-$mn-brand-bg: url(<%= asset_path 'logo.png' %>) no-repeat center !default;
+$mn-body-bg: #3b4a69 url(<%= asset_path 'conrel.png' %>) repeat-x !default;
+$mn-brand-mgTop: 10px !default;
+$mn-brand-height: 45px !default;
+$mn-brand-width: 165px !default;
+$mn-brand-bg: url(<%= asset_path 'logo1.png' %>) no-repeat center !default;
 $mn-navbar-inverse-bg: linear-gradient($mn-colorscheme-3V,$mn-colorscheme-3D) !default;
 
 $app-hide-title: 496px !default;
