form view backgrounded in basic panel

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -15,7 +15,7 @@ $mn-colorscheme-2V: #00796B !default;
 $mn-colorscheme-3V: #333 !default;
 $mn-colorscheme-3D: #333 !default;
 
-$mn-body-bg: #3b4a69 url(<%= asset_path 'conrel.png' %>) repeat-x !default;
+$mn-body-bg: #3b4a69 url(<%= asset_path 'conrel.gif' %>) !default;
 $mn-brand-mgTop: 10px !default;
 $mn-brand-height: 45px !default;
 $mn-brand-width: 165px !default;
@@ -25,6 +25,7 @@ $mn-navbar-inverse-bg: linear-gradient($mn-colorscheme-3V,$mn-colorscheme-3D) !d
 $app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
 $mn-content-container-bg-color: #fff !default;
+$mn-content-panel-bg-color: #F3F3F3 !default;
 $mn-menu-item-route-active-color: red !default;
 $mn-menu-item-route-hover-color: white !default;
 $mn-menu-item-route-color: #777777 !default;
