--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -527,11 +527,28 @@ mn-item-reports > div, .block {
 
 .mn-content-panel {
   background:
-    linear-gradient(135deg, transparent 10px, $mn-content-panel-bg-color 0) top left,
-    linear-gradient(315deg, transparent 10px, $mn-content-panel-bg-color 0) bottom right;
+    linear-gradient(135deg, transparent 12px, $mn-content-panel-bg-color 0) top left,
+    linear-gradient(315deg, transparent 12px, $mn-content-panel-bg-color 0) bottom right;
   background-size: 100% 72%;
   background-repeat: no-repeat;
   padding: 17px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow:hidden;
+  border-top:9px solid transparent;
+}
+
+.mn-content-panel::before {
+  content: ' ';
+  position: absolute;
+  left: 0px;
+  top:0px;
+  border: 8px solid transparent;
+  border-right: 8px solid $mn-colorscheme-1M;
+  border-bottom: 8px solid $mn-colorscheme-1M;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow:hidden;
 }
 
 //generic modifier styles
