--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -167,6 +167,12 @@ mn-grid th.mn-sortable {
 
 .mn-grid-layout-row { margin-top: $mn-grid-layout-row; }
 
+mn-grid tr.last-selected {
+  border-left-color: blue;
+  border-left-style: solid;
+  border-left-width: medium;
+}
+
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
