grid footer cleanup with glyphicons & tooltips

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -365,6 +365,9 @@ mn-menu-group > li > a:focus, .nav .open > a, .nav .open > a:hover, .nav .open >
   background-repeat: no-repeat !important;
   color: $mn-colorscheme-1V !important;
   border-radius: 0 !important;
+  outline:none !important;
+  -moz-box-shadow:none;
+  box-shadow:none;
 }
 
 mn-item-reports > div, .block {
