more disabled state look for qf if only selected items are shown
Basic general 'disabled' style overriding/adding to the default bootstrap one.
Some additions in angular-multi-select-css, and should be for overall disabled
look of the multi-select dropdown button.

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -24,6 +24,9 @@ $mn-navbar-inverse-bg: linear-gradient($mn-colorscheme-3V,$mn-colorscheme-3D) !d
 $mn-tab-passive-bg: linear-gradient($mn-colorscheme-1L,$mn-colorscheme-1P) !default;
 $mn-tab-active-bg: linear-gradient(#dedede,#fff) !default;
 
+$mn-disabled-L: #c1c1c1 !default;
+$mn-disabled-D: #a1a1a1 !default;
+// disabled-Light, disabled-Dark
 $app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
 $mn-content-container-bg-color: #fff !default;
