qf row graphics completed

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -8,7 +8,7 @@ $mn-colorscheme-1V: #428bca !default;
 $mn-colorscheme-1A: #FF8616 !default;
 // color 1Pale, 1Light, 1Medium, 1Dark, 1Very dark, 1Accent(contrast color)
 $mn-colorscheme-2L: #AEF6BF !default;
-$mn-colorscheme-2M: #96D098 !default;
+$mn-colorscheme-2M: #A0DCA0 !default;
 $mn-colorscheme-2D: #86CA87 !default;
 $mn-colorscheme-2V: #00796B !default;
 
