item filed changed state
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -173,6 +173,10 @@ mn-grid tr.last-selected {
   border-left-width: medium;
 }
 
+mnf-form input.changed {
+  background-color: yellow;
+}
+
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
