--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -177,6 +177,10 @@ mnf-form input.changed {
   background-color: yellow;
 }
 
+mnf-form button {
+  width: 84px;
+}
+
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
