--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -181,6 +181,13 @@ mnf-form button {
   width: 84px;
 }
 
+mnf-form .mn-form-group {
+  margin-bottom: 0px;
+}
+mnf-form .mn-form-control {
+  font-size: 14px !important;
+}
+
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
