bootstrap buttons group
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -184,8 +184,13 @@ mnf-form button {
 mnf-form .mn-form-group {
   margin-bottom: 0px;
 }
+
 mnf-form .mn-form-control {
   font-size: 14px !important;
+}
+
+mnf-form .mn-buttons-group {
+  margin-bottom: 5px;
 }
 
 mn-menu-item-route > a > span {
