state-ready css
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -193,6 +193,13 @@ mnf-form .mn-buttons-group {
   margin-bottom: 5px;
 }
 
+mnf-form .state-ready-field-value {
+  height: 30px;
+  padding-left: 26px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
