style navbar top appearance

--- a/app/assets/stylesheets/mohican/config_c5a.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config_c5a.css.scss.erb
@@ -15,14 +15,22 @@ $mn-colorscheme-2V: #96AAC8 !default;
 $mn-colorscheme-3V: #19323C !default;
 $mn-colorscheme-3D: #23415A !default;
 
-$mn-brand-height: 50px !default;
-$mn-brand-width: 172px !default;
+$mn-body-bg: #3b4a69 url(<%= asset_path 'conrel.gif' %>) !default;
+$mn-brand-mgTop: 10px !default;
+$mn-brand-height: 45px !default;
+$mn-brand-width: 165px !default;
 $mn-brand-bg: url(<%= asset_path 'logo_celesta.png' %>) no-repeat center !default;
 $mn-navbar-inverse-bg: linear-gradient($mn-colorscheme-3V,$mn-colorscheme-3D) !default;
+$mn-tab-passive-bg: linear-gradient($mn-colorscheme-1L,$mn-colorscheme-1P) !default;
+$mn-tab-active-bg: linear-gradient(#dedede,#fff) !default;
 
+$mn-disabled-L: #c1c1c1 !default;
+$mn-disabled-D: #a1a1a1 !default;
+// disabled-Light, disabled-Dark
 $app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
 $mn-content-container-bg-color: #fff !default;
+$mn-content-panel-bg-color: #F3F3F3 !default;
 $mn-menu-item-route-active-color: red !default;
 $mn-menu-item-route-hover-color: white !default;
 $mn-menu-item-route-color: #777777 !default;
