--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -50,17 +50,12 @@ a.navbar-brand {
   background-size: contain;
 }
 
-a.navbar-brand.active, a.navbar-brand:focus {
-  outline:none !important;
-  box-shadow:none;
-  cursor:default;
-}
-
 .navbar-static-top, .navbar-inverse {
   background: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)) !important;
-  // -webkit-box-shadow: -1px 0px 19px #0A1D42;
-  // -moz-box-shadow: -1px 0px 19px #0A1D42;
-  // box-shadow: -1px 0px 19px #0A1D42;
+}
+
+.navbar-static-top > .container-fluid {
+  padding-right: 0px !important;
 }
 
 .navbar-inverse {
@@ -87,14 +82,7 @@ a.navbar-brand.active, a.navbar-brand:focus {
     border-left:0;
     border-top:0;
     border-radius: 0px !important;
-    outline: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    cursor:default;
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    appearance:none;
+    padding: 1 !important;
 }
 
 .mn-select-filter button {
@@ -233,13 +221,6 @@ mn-menu-item-route > a > span {
   font-weight: 500;
 }
 
-.filter-bar-button.active, .filter-bar-button:focus, .QfRow button.active, .QfRow button:focus {
-// removing webkit active & focus markup
-  outline:none !important;
-  box-shadow:none;
-  cursor:default;
-}
-
 .filter-bar-item span.multiSelect > button {
   width: 140px;
 }
@@ -368,19 +349,50 @@ mn-navbar-right mn-menu-group li.navbar-text{
   padding-right: 15px;
 }
 
-.navbar-nav {
-  margin-left: 20px;
+mn-navbar-collapsible-left .navbar-nav , #navbar-steady {
   padding-left: 10px;
-  // border: #666 1px solid;
-  // background: rgba(#000,.3);
-  // background:
-  //       linear-gradient(45deg, transparent 10px, rgba(#000,.3) 10px),
-  //       linear-gradient(315deg, transparent 10px, rgba(#000,.3) 10px);
-  // background-position: bottom left, bottom right;
-  //   -moz-background-size: 50% 50%;
-  //   -webkit-background-size: 50% 50%;
-  //   background-size: 50% 50%;
-  //   background-repeat: no-repeat;
+  position:relative;
+}
+
+#navbar-steady {
+  background: rgba(#000,.3);
+  background:
+        linear-gradient(45deg, transparent 10px, rgba(#000,.3) 10px);
+  background-position: bottom left;
+  background-repeat: no-repeat;
+}
+
+mn-navbar-collapsible-left .navbar-nav {
+  margin-left: 20px;
+  background: rgba(#000,.3);
+  background:
+        linear-gradient(45deg, transparent 10px, rgba(#000,.3) 10px),
+        linear-gradient(315deg, transparent 10px, rgba(#000,.3) 10px);
+  background-position: bottom left, bottom right;
+  -moz-background-size: 50% 50%;
+  -webkit-background-size: 50% 50%;
+  background-size: 50% 50%;
+  background-repeat: no-repeat;
+}
+
+mn-navbar-collapsible-left .navbar-nav:before, #navbar-steady:before {
+  content: ' ';
+  position: absolute;
+  left: 0px;
+  bottom:0px;
+  width: 13px;
+  height: 13px;
+  background:
+    linear-gradient(45deg, transparent 9px, $mn-colorscheme-1V 0) bottom left;
+  background-repeat: no-repeat;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow:hidden;
+}
+
+#navbar-steady:before {
+  background:
+    linear-gradient(45deg, transparent 9px, $mn-colorscheme-3D 0) bottom left;
 }
 
 mn-menu-group-item > li:hover, mn-menu-group-item > li:focus {
@@ -390,8 +402,17 @@ mn-menu-group-item > li:hover, mn-menu-group-item > li:focus {
 }
 
 mn-menu-group > li > a:focus, .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
-  background-color: #090909;
+  background:
+        linear-gradient(45deg, transparent 10px, rgba(#000,.8) 10px),
+        linear-gradient(315deg, transparent 10px, rgba(#000,.8) 10px) !important;
+  background-position: bottom left, bottom right;
+  -moz-background-size: 50% 50%;
+  -webkit-background-size: 50% 50%;
+  background-size: 50% 50%;
+  background-repeat: no-repeat;
   color: white;
+  padding-right: 1px;
+  margin-right: 14px;
 }
 
 .nav-tabs li a {
@@ -415,14 +436,6 @@ mn-menu-group > li > a:focus, .nav .open > a, .nav .open > a:hover, .nav .open >
   color: $mn-colorscheme-1V !important;
   border-radius: 0 !important;
   border: 0 !important;
-  outline:none !important;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  cursor:default;
-  -webkit-appearance:none;
-  -moz-appearance:none;
-  appearance:none;
 }
 
 mn-item-reports > div, .block {
@@ -644,6 +657,20 @@ mn-item-reports > div, .block {
 // fix for inset shadow bug of the table-containing div, to be uniform on striped rows, because shadow is not visible on opaque background
 .table-striped > tbody > tr:nth-child(odd) > td {
   background-color: rgba(#999, .1);
+}
+
+// removing webkit active & focus markup
+.filter-bar-button.active, .filter-bar-button:focus, .QfRow button.active, .QfRow button:focus,
+.filterRowAnimWrap input[type="text"],
+.nav-tabs li a:focus, .nav-tabs li a.active, .nav-tabs li a:active, a.navbar-brand.active, a.navbar-brand:focus {
+  outline:none !important;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  cursor:default;
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  appearance:none;
 }
 
 .table > thead > tr > th, .table > thead > tr > td,
