edit and delete, both sides
This fixes bugs for the delete (how did this ever work?), but
it also fixes problems with the classic HTML interface.

- returns the application.js, which is only used in back-end
  scaffolds,
- fixes the weird bug in the service (why did this work earlier?)
- correctly returns result on delete and
- fixes the missing doc name for activity seeds (why did this work
  earlier, and how?)

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
     %meta(name="msapplication-TileColor" content="#FF3300")
     %meta(name="msapplication-TileImage" content="assets/icon.png")
     %meta(name="msapplication-tooltip" content="ID Pickup")
-    = stylesheet_link_tag    'application', media: 'all'
+    -#= stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
