fix button height difference, 32 vs 33
Now they are all 33px.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -236,6 +236,10 @@ mn-menu-item-route > a > span {
   border-top: 6px solid #fff;
 }
 
+.filterBar .btn {
+  padding-bottom: 7px;
+}
+
 .QfRow, .table > thead > tr th.QfRow {
   background: $mn-qfilter-subheader-background;
   padding: 2px 1px 4px 1px !important;
