mohican 404 - page not found
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -730,3 +730,8 @@ td.mn-content-container {
     cursor: not-allowed !important;
     border-color: $mn-disabled-D !important;
 }
+.page-not-found-image {
+  background: $mn-404-bg;
+  height: 400px;
+  weight: 400px;
+}
