--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -20,6 +20,7 @@ $mn-brand-mgTop: 10px !default;
 $mn-brand-height: 45px !default;
 $mn-brand-width: 165px !default;
 $mn-brand-bg: url(<%= asset_path 'logo1.png' %>) no-repeat center !default;
+$mn-404-bg: url(<%= asset_path '404.jpg' %>) no-repeat center !default;
 $mn-navbar-inverse-bg: linear-gradient($mn-colorscheme-3V,$mn-colorscheme-3D) !default;
 $mn-tab-passive-bg: linear-gradient($mn-colorscheme-1L,$mn-colorscheme-1P) !default;
 $mn-tab-active-bg: linear-gradient(#dedede,#fff) !default;
