--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
       %nav.navbar.navbar-static-top.navbar-inverse(role="navigation")
         .container-fluid
           .navbar-header.pull-left
-            %a.navbar-brand(href="#")
+            %a.navbar-brand(href="/")
               =image_tag "logo.png", height: '50'
               #{'id5'.capitalize}
         -#
