order scaffold complete for basic data
Both back and and front end scaffolds work, but only for
basic data. Relations need to be added separatelly.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -16,7 +16,7 @@
     - @orders.each do |order|
       %tr
         %td= order.order_number
-        %td= order.creator.name
+        %td= order.creator.name unless order.creator.nil?
         %td= order.status
         %td= order.total
         %td= order.items
