fix mnf-reference css
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -159,7 +159,7 @@ mn-grid tr.last-selected {
   border-left-width: medium;
 }
 
-mnf-form input.changed, mnf-form span.changed {
+mnf-form .changed {
   background-color: yellow;
 }
 
@@ -186,11 +186,35 @@ mnf-form .state-ready-field-value {
   padding-bottom: 5px;
 }
 
+mnf-reference .padding-top-0 {
+  padding-top: 0px !important;
+}
+
+mnf-form .state-ready-field-value i {
+  font-size: 1.6em;
+}
+
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
 }
 
+mnf-reference .btn-link {
+  padding: 0px;
+  padding-right: 17px;
+  padding-left: 11px;
+}
+
+mnf-reference .ref-container {
+  margin-left: -11px;
+  margin-right: 0px;
+  padding-top: 2px;
+}
+
+mnf-reference .ref-edit-label {
+  padding-top: 3px;
+  padding-left: 11px;
+}
 .filterBar {
   background:
     $mn-content-header-background bottom right,
