thinner ref dialog
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -215,6 +215,11 @@ mnf-reference .ref-edit-label {
   padding-top: 3px;
   padding-left: 11px;
 }
+
+.mnf-reference-dialog-container {
+  max-width: 1100px;
+}
+
 .filterBar {
   background:
     $mn-content-header-background bottom right,
