ref dialog close button margin top
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -220,6 +220,10 @@ mnf-reference .ref-edit-label {
   max-width: 1100px;
 }
 
+.ref-dialog-close-btn {
+  margin-top: 5px;
+}
+
 .filterBar {
   background:
     $mn-content-header-background bottom right,
