no more watches in mnf-form-grid
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -159,7 +159,7 @@ mn-grid tr.last-selected {
   border-left-width: medium;
 }
 
-mnf-form .changed {
+mnf-form .changed, mnf-form-grid .changed {
   background-color: yellow;
 }
 
