font awesome crud icons in mn-grid
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -36,6 +36,10 @@ body {
   background: $mn-body-bg !important;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .mn-navbar-title {
   height: 50px;
   display: inline;
@@ -153,6 +157,17 @@ mn-grid th.mn-sortable {
 
 .mn-grid-layout-row { margin-top: $mn-grid-layout-row; }
 
+.mn-grid-data-row {
+  height: 43px;
+}
+
+.mnf-grid-field-ready {
+  padding-top: 7px;
+  padding-left: 13px;
+}
+.mn-grid-select-box {
+  margin-top: 10px !important;
+}
 mn-grid tr.last-selected {
   border-left-color: blue;
   border-left-style: solid;
